# starfinder

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  Snakefile  starfinder-dev.code-workspace  starfinder.code-workspace
broad-uger/: broad-jobscript.sh  config.yaml
config/: config.yaml  environment-v9.yaml  (+4 more)
src/python/: README.md  pyproject.toml
src/python/starfinder/: __init__.py  utils.py
src/python/starfinder/barcode/: __init__.py  codebook.py  encoding.py  extraction.py  filtering.py
src/python/starfinder/benchmark/: __init__.py  core.py  data.py  evaluate.py  presets.py  report.py  runner.py
src/python/starfinder/dataset/: __init__.py  dataset.py  fov.py  logging.py  paths.py  types.py
src/python/starfinder/io/: __init__.py  tiff.py
src/python/starfinder/preprocessing/: __init__.py  morphology.py  normalization.py
src/python/starfinder/registration/: __init__.py  _skimage_backend.py  benchmark.py  demons.py  metrics.py  phase_correlation.py  pyramid.py
src/python/starfinder/spotfinding/: __init__.py  local_maxima.py
src/python/starfinder/testdata/: __init__.py  __main__.py  synthetic.py  validation.py
src/python/starfinder/testing/: __init__.py  __main__.py  synthetic.py
src/python/test/: __init__.py  conftest.py  test_barcode.py  test_benchmark.py  test_dataset.py  test_demons.py  test_e2e.py  test_encoding.py  test_extraction.py  test_fov.py  test_io.py  test_preprocessing.py  test_registration.py  test_spotfinding.py  test_synthetic.py  test_types.py  test_utils.py
src/python/tests/: conftest.py  test_encoding.py  test_synthetic.py
(+453 files in other folders)
